# TUI-Claude-Offices

./: .gitignore  Makefile  README.md
backend/app/core/: event_processor.py
backend/app/db/: models.py
backend/tests/: test_api.py
tui/: office.py  pyproject.toml
